# makefile-modifier

./: README.md  pyproject.toml
src/makefile_modifier/: cli.py  modifier.py
