[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makefile-modifier"
version = "0.1.0"  # 버전을 직접 지정
description = "A tool to modify Makefile rules"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Furiosa AI", email = "contact@furiosa.ai" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyparsing~=3.1.4",
]

[project.urls]
Documentation = "https://github.com/furiosa-ai/makefile-modifier#readme"
Issues = "https://github.com/furiosa-ai/makefile-modifier/issues"
Source = "https://github.com/furiosa-ai/makefile-modifier"

[project.scripts]
makefile-modifier = "makefile_modifier.cli:main"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=makefile_modifier --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/makefile_modifier/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/makefile_modifier"]